<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/personal">
    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        />
    <com.dragankrstic.autotypetextview.AutoTypeTextView
        app:animateTextTypeWithoutMistakes="@string/tituloPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        android:textSize="25sp"
        />

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/bmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bmb_buttonEnum="ham"
        app:bmb_shadowColor="@color/background"
        app:bmb_normalColor="@color/white"
        android:backgroundTint="@color/white"
        app:bmb_autoHide="false"
        app:bmb_buttonRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_border3"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="truck.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_scale="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/textBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        android:text="@string/tBienvenido"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/outline_directions_car_white_36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        tools:ignore="Content Description"
        />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBienvenido"
        android:layout_marginTop="25dp">


            <!--            TABLA                -->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                android:id="@+id/textTituloCard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/tTuUltimoViaje"
                android:textAlignment="center"
                android:background="@color/md_blue_100"
                android:textSize="17sp"
                />

            <!--            COLUMNAS              -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:divider="?android:dividerVertical"
                android:showDividers="middle"
                android:baselineAligned="false">

            <!--            COLUMNA1          -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tDuracion"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tFecha"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/tVelocidad"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tFatiga"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!--            COLUMNA2          -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDuracion"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textFecha"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textVelocidad"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textFatiga"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

            </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/buttonManejar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tManejar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round_border2"
        android:onClick="manejar"
        />





</android.support.constraint.ConstraintLayout>